# mcp-server-whisper

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  release.yml
docs/: architecture.md  mcp-overview.md  openai-audio.md  openai-realtime.md
src/mcp_server_whisper/: constants.py  server.py
src/mcp_server_whisper/domain/: audio_processor.py  file_filter.py
src/mcp_server_whisper/infrastructure/: __init__.py  cache.py  file_system.py  openai_client.py
src/mcp_server_whisper/models/: __init__.py  audio.py  responses.py  tts.py
src/mcp_server_whisper/services/: audio_service.py  file_service.py  transcription_service.py  tts_service.py
src/mcp_server_whisper/tools/: __init__.py  audio_tools.py  file_tools.py  transcription_tools.py  tts_tools.py
src/whisper_local/: cli.py  conversation.py  convert.py  gpt4o.py  main.py  mcp_server.py  transcribe.py
tests/: conftest.py  test_audio_files.py  test_cli.py  test_conversation.py  test_convert.py  test_file_system.py  test_gpt4o.py  test_main.py  test_mcp.py  test_server.py  test_transcribe.py
