[project]
name = "mcp-server-whisper"
version = "0.1.0"
description = "A template repo for using OpenAI whisper"
requires-python = ">=3.10"
dependencies = [
    "aiofiles",
    "dotenv",
    "ffmpeg-python",
    "mcp[cli]",
    "openai",
    "pydub"
]

[project.scripts]
server = "mcp_server_whisper.server:main"

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "ruff"
]

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
ignore = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Unused async fixture loop scope:pytest.PytestWarning"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

packages = ["src/mcp_server_whisper"]