[project]
name = "mcp-server-whisper"
version = "0.1.0"
description = "A template repo for using OpenAI whisper"
requires-python = ">=3.10,<=3.11"  # pydub breaks in Python 3.12
dependencies = [
    "aiofiles",
    "dotenv",
    "ffmpeg-python",
    "mcp[cli]",
    "openai",
    "pydub",
]

[project.scripts]
server = "mcp_server_whisper.server:main"

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "types-aiofiles",
]

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I", "D", "W"]
lint.fixable = ["I", "E", "W"]

[tool.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Unused async fixture loop scope:pytest.PytestWarning"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

packages = ["src/mcp_server_whisper"]